tambah nomor WA

--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,7 @@
                                 And delicious Flavors.
                             </p>
 
-                            <a href="#" class="button">
+                            <a href="href=https://wa.me/6281341291672?text=Halo Arya! say ingin beli buah, apakah masih tersedia?" target="_blank" rel="noopener noreferrer" class="button">
                                 Order Fruit Now
                             </a>
 
