--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,7 @@
                                 And delicious Flavors.
                             </p>
 
-                            <a href="href=https://wa.me/6281341291672?text=Halo Arya! say ingin beli buah, apakah masih tersedia?" target="_blank" rel="noopener noreferrer" class="button">
+                            <a href="https://api.whatsapp.com/send/?phone=6281341291672?text=Halo%20Arya!%20saya%20ingin%20beli%20buah,%20apakah%20masih%20tersedia?" target="_blank" rel="noopener noreferrer" class="button">
                                 Order Fruit Now
                             </a>
 
