--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,7 @@
                                 And delicious Flavors.
                             </p>
 
-                            <a href="https://api.whatsapp.com/send/?phone=6281341291672?text=Halo%20Arya!%20saya%20ingin%20beli%20buah,%20apakah%20masih%20tersedia?" target="_blank" rel="noopener noreferrer" class="button">
+                            <a href="https://api.whatsapp.com/send/?phone=6281341291672?text=Halo+Arya%21saya%21ingin%20beli%20buah,%20apakah%20masih%20tersedia%3f&type=phone_number&app_absent=0" target="_blank" rel="noopener noreferrer" class="button">
                                 Order Fruit Now
                             </a>
 
